Fix Bug #59225 Deadlock between DML and innodb_adaptive_hash_index=OFF

rb://587 approved by Marko